--- a/vignettes/case-study-gtcars.Rmd
+++ b/vignettes/case-study-gtcars.Rmd
@@ -33,10 +33,10 @@ For the purpose of simply learning more about **gt**, let's reduce this 47-row t
 # Get a subset of 8 cars from the `gtcars` dataset: two
 # from each manufacturer country of origin except the UK
 gtcars_8 <-
-  gtcars %>%
-  group_by(ctry_origin) %>%
-  slice_head(n = 2) %>%
-  ungroup() %>%
+  gtcars |>
+  group_by(ctry_origin) |>
+  slice_head(n = 2) |>
+  ungroup() |>
   filter(ctry_origin != "United Kingdom")
 
 # Show the `gtcars_8` tibble
@@ -62,17 +62,17 @@ Let's again use **dplyr** to help make groupings by the `ctry_origin` column, wh
 
 ```{r group_by_gtcars}
 # Use `group_by()` on `gtcars` and pass that to `gt()`
-gtcars_8 %>%
-  group_by(ctry_origin) %>%
+gtcars_8 |>
+  group_by(ctry_origin) |>
   gt()
 ```
 
 Getting the row groups in the preferred order can be done easily with **dplyr**'s `arrange()` function. For example, we can have groups that are arranged alphabetically by manufacturer (`mfr`) and then sorted by highest sticker price (`msrp`) to lowest. 
 
 ```{r group_by_arrange_gtcars}
-gtcars_8 %>%
-  group_by(ctry_origin) %>%
-  arrange(mfr, desc(msrp)) %>%
+gtcars_8 |>
+  group_by(ctry_origin) |>
+  arrange(mfr, desc(msrp)) |>
   gt()
 ```
 
@@ -83,11 +83,11 @@ We could also use factor levels to get a more particular ordering within `arrang
 order_countries <- c("Germany", "Italy", "United States", "Japan")
 
 # Reorder the table rows by our specific ordering of groups
-gtcars_8 %>%
+gtcars_8 |>
   arrange(
     factor(ctry_origin, levels = order_countries), mfr, desc(msrp)
-  ) %>%
-  group_by(ctry_origin) %>%
+  ) |>
+  group_by(ctry_origin) |>
   gt()
 ```
 
@@ -96,14 +96,14 @@ The last variation is to combine the manufacturer name with the model name, usin
 ```{r factor_gtcars_rownames}
 # Reorder the table rows by our specific ordering of groups
 tab <-
-  gtcars_8 %>%
+  gtcars_8 |>
   arrange(
     factor(ctry_origin, levels = order_countries),
     mfr, desc(msrp)
-    ) %>%
-  mutate(car = paste(mfr, model)) %>%
-  select(-mfr, -model) %>%
-  group_by(ctry_origin) %>%
+    ) |>
+  mutate(car = paste(mfr, model)) |>
+  select(-mfr, -model) |>
+  group_by(ctry_origin) |>
   gt(rowname_col = "car")
 
 # Show the table
@@ -112,15 +112,15 @@ tab
 
 ### Hiding and Moving Some Columns
 
-Let's hide two columns that we don't need to the final table: `drivetrain` and `bdy_style`. We can use the `cols_hide()` function to hide columns. The same end result might also have been achieved by using `gtcars %>% dplyr::select(-c(drivetrain, bdy_style))`, before introducing the table to `gt()`. Why this function then? Sometimes you'll need variables for conditional statements within **gt** but won't want to display them in the end.
+Let's hide two columns that we don't need to the final table: `drivetrain` and `bdy_style`. We can use the `cols_hide()` function to hide columns. The same end result might also have been achieved by using `gtcars |> dplyr::select(-c(drivetrain, bdy_style))`, before introducing the table to `gt()`. Why this function then? Sometimes you'll need variables for conditional statements within **gt** but won't want to display them in the end.
 
 Aside from hiding columns, let's *move* some of them. Again, this could be done with `dplyr::select()` but there are options here in **gt** via the `cols_move_to_start()`, `cols_move()`, and `cols_move_to_end()` functions.
 
 ```{r cols_hide_move}
 # Use a few `cols_*()` functions to hide and move columns 
 tab <- 
-  tab %>%
-  cols_hide(columns = c(drivetrain, bdy_style)) %>%
+  tab |>
+  cols_hide(columns = c(drivetrain, bdy_style)) |>
   cols_move(
     columns = c(trsmn, mpg_c, mpg_h),
     after = trim
@@ -140,7 +140,7 @@ Here, we'll put the `mpg_c`, `mpg_h`, `hp`, `hp_rpm`, `trq`, `trq_rpm` columns u
 # Put the first three columns under a spanner
 # column with the label 'Performance'
 tab <- 
-  tab %>%
+  tab |>
   tab_spanner(
     label = "Performance",
     columns = c(mpg_c, mpg_h, hp, hp_rpm, trq, trq_rpm)
@@ -167,19 +167,19 @@ Labeling columns essentially means that we are choosing display-friendly labels 
 # MPG, HP, and torque; relabel all the remaining
 # columns for a nicer-looking presentation
 tab <- 
-  tab %>%
+  tab |>
   cols_merge(
     columns = c(mpg_c, mpg_h),
     pattern = "{1}c<br>{2}h"
-    ) %>%
+    ) |>
   cols_merge(
     columns = c(hp, hp_rpm),
     pattern = "{1}<br>@{2}rpm"
-  ) %>%
+  ) |>
   cols_merge(
     columns = c(trq, trq_rpm),
     pattern = "{1}<br>@{2}rpm"
-  ) %>%
+  ) |>
   cols_label(
     mpg_c = "MPG",
     hp = "HP",
@@ -202,7 +202,7 @@ There are a number of formatter functions, all with the general naming conventio
 # Format the `msrp` column to USD currency
 # with no display of the currency subunits
 tab <- 
-  tab %>%
+  tab |>
   fmt_currency(
     columns = msrp,
     currency = "USD",
@@ -224,11 +224,11 @@ It's sometimes useful to modify the default styles of table cells. We can do thi
 # and modify the text size of a few columns
 # of data
 tab <- 
-  tab %>%
+  tab |>
   cols_align(
     align = "center",
     columns = c(mpg_c, hp, trq)
-  ) %>%
+  ) |>
   tab_style(
     style = cell_text(size = px(12)),
     locations = cells_body(
@@ -250,7 +250,7 @@ A text transform via the `text_transform()` function is a great way to further m
 # here `x` represents a character vector defined
 # in the `cells_body()` function
 tab <- 
-  tab %>%
+  tab |>
   text_transform(
     locations = cells_body(columns = trsmn),
     fn = function(x) {
@@ -288,7 +288,7 @@ The `tab_header()` function allows us to place a table title and, optionally, a 
 # Add a table title and subtitle; we can use
 # markdown with the `md()` helper function
 tab <- 
-  tab %>%
+  tab |>
   tab_header(
     title = md("The Cars of **gtcars**"),
     subtitle = "These are some fine automobiles"
@@ -306,7 +306,7 @@ A *source note* can be added below the display table using the `tab_source_note(
 # Add a source note to the bottom of the table; this
 # appears below the footnotes
 tab <- 
-  tab %>%
+  tab |>
   tab_source_note(
     source_note = md(
       "Source: Various pages within the Edmonds website."
@@ -335,54 +335,54 @@ In terms of structuring the code, we're taking all the previous statements and p
 # Use dplyr functions to get the car with the best city gas mileage;
 # this will be used to target the correct cell for a footnote
 best_gas_mileage_city <- 
-  gtcars %>% 
-  arrange(desc(mpg_c)) %>%
-  slice(1) %>%
-  mutate(car = paste(mfr, model)) %>%
+  gtcars |> 
+  arrange(desc(mpg_c)) |>
+  slice(1) |>
+  mutate(car = paste(mfr, model)) |>
   pull(car)
 
 # Use dplyr functions to get the car with the highest horsepower
 # this will be used to target the correct cell for a footnote
 highest_horsepower <- 
-  gtcars %>% 
-  arrange(desc(hp)) %>%
-  slice(1) %>%
-  mutate(car = paste(mfr, model)) %>%
+  gtcars |> 
+  arrange(desc(hp)) |>
+  slice(1) |>
+  mutate(car = paste(mfr, model)) |>
   pull(car)
 
 # Create a display table with `gtcars`, using all of the previous
 # statements piped together + additional `tab_footnote()` stmts
 tab <-
-  gtcars %>%
+  gtcars |>
   arrange(
     factor(ctry_origin, levels = order_countries),
     mfr, desc(msrp)
-  ) %>%
-  mutate(car = paste(mfr, model)) %>%
-  select(-mfr, -model) %>%
-  group_by(ctry_origin) %>%
-  gt(rowname_col = "car") %>%
-  cols_hide(columns = c(drivetrain, bdy_style)) %>%
+  ) |>
+  mutate(car = paste(mfr, model)) |>
+  select(-mfr, -model) |>
+  group_by(ctry_origin) |>
+  gt(rowname_col = "car") |>
+  cols_hide(columns = c(drivetrain, bdy_style)) |>
   cols_move(
     columns = c(trsmn, mpg_c, mpg_h),
     after = trim
-  ) %>%
+  ) |>
   tab_spanner(
     label = "Performance",
     columns = c(mpg_c, mpg_h, hp, hp_rpm, trq, trq_rpm)
-  ) %>%
+  ) |>
   cols_merge(
     columns = c(mpg_c, mpg_h),
     pattern = "{1}c<br>{2}h"
-  ) %>%
+  ) |>
   cols_merge(
     columns = c(hp, hp_rpm),
     pattern = "{1}<br>@{2}rpm"
-  ) %>%
+  ) |>
   cols_merge(
     columns = c(trq, trq_rpm),
     pattern = "{1}<br>@{2}rpm"
-  ) %>%
+  ) |>
   cols_label(
     mpg_c = "MPG",
     hp = "HP",
@@ -391,22 +391,22 @@ tab <-
     trim = "Trim",
     trsmn = "Transmission",
     msrp = "MSRP"
-  ) %>%
+  ) |>
   fmt_currency(
     columns = msrp,
     currency = "USD",
     decimals = 0
-  ) %>%
+  ) |>
   cols_align(
     align = "center",
     columns = c(mpg_c, hp, trq)
-  ) %>%
+  ) |>
   tab_style(
     style = cell_text(size = px(12)),
     locations = cells_body(
       columns = c(trim, trsmn, mpg_c, hp, trq)
     )
-  ) %>%
+  ) |>
   text_transform(
     locations = cells_body(columns = trsmn),
     fn = function(x) {
@@ -423,29 +423,29 @@ tab <-
       
       paste(speed, " Speed<br><em>", type, "</em>")
     }
-  ) %>%
+  ) |>
   tab_header(
     title = md("The Cars of **gtcars**"),
     subtitle = "These are some fine automobiles"
-  ) %>%
+  ) |>
   tab_source_note(
     source_note = md(
       "Source: Various pages within the Edmonds website.")
-  ) %>%
+  ) |>
   tab_footnote(
     footnote = md("Best gas mileage (city) of all the **gtcars**."),
     locations = cells_body(
       columns = mpg_c,
       rows = best_gas_mileage_city
     )
-  ) %>%
+  ) |>
   tab_footnote(
     footnote = md("The highest horsepower of all the **gtcars**."),
     locations = cells_body(
       columns = hp,
       rows = highest_horsepower
     )
-  ) %>%
+  ) |>
   tab_footnote(
     footnote = "All prices in U.S. dollars (USD).",
     locations = cells_column_labels(columns = msrp)
