--- a/vignettes/creating-summary-lines.Rmd
+++ b/vignettes/creating-summary-lines.Rmd
@@ -23,15 +23,14 @@ We can use the **gt** `summary_rows()` function to insert summary rows into a ta
 - using the `tab_row_group()` function on a gt object
 - by passing in a grouped `tbl_df` object to `gt()` (using `dplyr::group_by()`)
 
-We generate the summary data through specification of aggregation functions. You choose how to format the values in the resulting summary cells by use of a formatter function (e.g,
-`fmt_number()`) and any relevant options. These summary rows are automatically inserted within the relevant row groups (for group-wise summaries) or at the bottom of the table (as a grand summary), where each summary row is the result of a different aggregation function. 
+We generate the summary data through specification of aggregation functions. You choose how to format the values in the resulting summary cells by use of a formatter function (e.g., `fmt_number()`) and any relevant options. These summary rows are automatically inserted within the relevant row groups (for group-wise summaries) or at the bottom of the table (as a grand summary), where each summary row is the result of a different aggregation function. 
 
 ### Preparing the Input Data Table
 
 Let's use the `exibble` dataset (included in the **gt** package) to demonstrate how summary rows can be added. That table contains categorical columns named `row` and `group`, along several columns with varying data types. Here is a preview of the `exibble` dataset using solely the `gt()` function with no other options: 
 
 ```{r exibble_preview_gt}
-exibble %>% gt()
+exibble |> gt()
 ```
 
 We'll create a table stub with both row labels (using the `row` column) and row groups (using the `group` column). The end result will be a table organized with labeled rows that are grouped together (the row group labels identify each of the row groups). To make the examples a bit easier to follow, some of the columns in exibble will first be dropped through a `dplyr::select()` statement.
@@ -39,9 +38,9 @@ We'll create a table stub with both row labels (using the `row` column) and row 
 ```{r exibble_a}
 # Create a gt table using the `exibble` dataset
 exibble_a <-
-  exibble %>%
-  select(-c(fctr, date, time, datetime)) %>%
-  gt(rowname_col = "row", groupname_col = "group") %>%
+  exibble |>
+  select(-c(fctr, date, time, datetime)) |>
+  gt(rowname_col = "row", groupname_col = "group") |>
   sub_missing()
 
 exibble_a
@@ -63,7 +62,7 @@ Because each function will yield a row, we need to be able to label that row. So
 # `mean()`, `sum()`, and `sd()` functions
 # (only for the `num` column)
 exibble_b <- 
-  exibble_a %>%
+  exibble_a |>
   summary_rows(
     groups = everything(),
     columns = num,
@@ -88,14 +87,14 @@ In the previous example we have an `NA` value in the `num/row_6` cell, and so we
 # groups (using `groups = everything()`); we will
 # use names and formulas this time in `fns`
 exibble_c <- 
-  exibble_a %>%
+  exibble_a |>
   summary_rows(
     groups = everything(),
     columns = num,
     fns = list(
-      avg = ~mean(., na.rm = TRUE),
-      total = ~sum(., na.rm = TRUE),
-      s.d. = ~sd(., na.rm = TRUE)
+      avg = ~ mean(., na.rm = TRUE),
+      total = ~ sum(., na.rm = TRUE),
+      s.d. = ~ sd(., na.rm = TRUE)
     )
   )
 
@@ -118,11 +117,11 @@ fns_labels <-
 # before, supply `fns_labels` to `fns`,
 # and format the cell summary data
 exibble_d <- 
-  exibble_a %>%
+  exibble_a |>
   fmt_scientific(
     columns = num,
     decimals = 3
-  ) %>%
+  ) |>
   summary_rows(
     groups = everything(),
     columns = num,
@@ -146,28 +145,28 @@ We can re-use summary row labels and fill the otherwise empty summary cells with
 # before, supply `fns_labels` to `fns`,
 # and format the cell summary data
 exibble_e <- 
-  exibble_a %>%
+  exibble_a |>
   fmt_scientific(
     columns = num,
     decimals = 3
-  ) %>%
+  ) |>
   fmt_currency(
     columns = currency,
     currency = "EUR"
-    ) %>%
+  ) |>
   summary_rows(
     groups = everything(),
     columns = num,
     fns = fns_labels,
     fmt = list(~ fmt_scientific(., decimals = 3))
-  ) %>%
+  ) |>
   summary_rows(
     groups = "grp_a",
     columns = currency,
     fns = c(
       fns_labels,
-      min = ~min(.),
-      max = ~max(.)
+      min = ~ min(.),
+      max = ~ max(.)
     ),
     fmt = list(~ fmt_currency(., currency = "EUR"))
   )
@@ -195,17 +194,17 @@ formats <-
 # when generating summary rows we can also
 # supply formatter options from this list
 exibble_f <- 
-  exibble_a %>%
+  exibble_a |>
   fmt_scientific(
     columns = num,
     decimals = formats$decimals,
     locale = formats$locale
-  ) %>%
+  ) |>
   fmt_currency(
     columns = currency,
     currency = formats$currency,
     locale = formats$locale
-  ) %>%
+  ) |>
   summary_rows(
     groups = everything(),
     columns = num,
@@ -214,7 +213,7 @@ exibble_f <-
       decimals = formats$decimals,
       locale = formats$locale
     ))
-  ) %>%
+  ) |>
   summary_rows(
     groups = "grp_a",
     columns = currency,
@@ -244,9 +243,9 @@ Let's keep it simple and create grand summary rows on a table without a stub. We
 # Create a simple grand summary on a gt
 # table that contains no stub
 exibble_g <-
-  exibble %>%
-  select(num, char, currency) %>%
-  gt() %>%
+  exibble |>
+  select(num, char, currency) |>
+  gt() |>
   grand_summary_rows(
     columns = c(num, currency),
     fns = fns_labels
@@ -263,7 +262,7 @@ A grand summary can be used in conjunction with group-wise summaries. Here's an 
 # calls of `grand_summary_rows()` since
 # the formatting will be different)
 exibble_h <- 
-  exibble_f %>%
+  exibble_f |>
   grand_summary_rows(
     columns = num,
     fns = fns_labels,
@@ -271,7 +270,7 @@ exibble_h <-
       suffixing = TRUE,
       locale = formats$locale
     ))
-  ) %>%
+  ) |>
   grand_summary_rows(
     columns = currency,
     fns = fns_labels,
@@ -303,17 +302,17 @@ Here is an example that uses multiple calls of `tab_options()` and `tab_footnote
 # starting point, style summary cells with
 # `tab_options()` and add two footnotes
 exibble_i <- 
-  exibble_h %>%
+  exibble_h |>
   tab_options(
     summary_row.background.color = "lightblue",
     grand_summary_row.background.color = "lightgreen"
-  ) %>%
+  ) |>
   tab_footnote(
     footnote = md("Mean of all *num* values."),
     locations = cells_grand_summary(
       columns = "num", rows = "avg"
     )
-  ) %>%
+  ) |>
   tab_footnote(
     footnote = md("Highest `currency` value in **grp_a**"),
     locations = cells_summary(
@@ -335,17 +334,17 @@ However, the object created still contains data and we can obtain the summary da
 ```{r summary_list}
 # Extract the summary data from `exibble_d`
 # to a list  object
-summary_list <- exibble_d %>% extract_summary()
+summary_list <- exibble_d |> extract_summary()
 ```
 
 ```{r summary_list_grp_a}
 # Print out the summary for the `grp_a` group
-summary_list %>% .$summary_df_data_list %>% .$grp_a
+summary_list$summary_df_data_list$grp_a
 ```
 
 ```{r summary_list_grp_b}
 # Print out the summary for the `grp_b` group
-summary_list %>% .$summary_df_data_list %>% .$grp_b
+summary_list$summary_df_data_list$grp_b
 ```
 
 The output tibbles within the list always contain the `groupname` and `rowname` columns. The `groupname` column is filled with the name of the row group that was given to `summary_rows()`. The `rowname` column contains the descriptive stub labels for the summary rows (recall that values are either supplied explicitly in `summary_rows()`, or, are generated from the function names). The remaining columns are those from the original dataset.
@@ -357,15 +356,15 @@ The output data from `extract_summary()` can be reintroduced to a reproducible w
 # of summary data frames, extract the summaries,
 # and then combine them; input that into `gt()`,
 # and format the `num` column with `fmt_number()`
-exibble_d %>%
-  extract_summary() %>%
-  unlist(recursive = FALSE) %>%
-  bind_rows() %>%
-  gt() %>%
+exibble_d |>
+  extract_summary() |>
+  unlist(recursive = FALSE) |>
+  bind_rows() |>
+  gt() |>
   fmt_number(
     columns = num,
     decimals = 1
-  ) %>%
+  ) |>
   sub_missing(columns = c(char, currency, row, group))
 ```
 
@@ -411,7 +410,7 @@ Because this is character value that's returned, we don't need formatting functi
 # the `fmt_passthrough` funtion allows for
 # minimal formatting of the aggregate values
 exibble_j <- 
-  exibble_a %>%
+  exibble_a |>
   grand_summary_rows(
     columns = c(num, currency),
     fns = list(high = ~ agg_highest_two_above_value(., 20)),
@@ -426,7 +425,7 @@ We can extract the grand summary data from the `exibble_j` object. Note that col
 ```{r}
 # Extract the summary list from `exibble_j`
 # and inspect using `str()`
-exibble_j %>%
-  extract_summary() %>%
+exibble_j |>
+  extract_summary() |>
   str()
 ```
