--- a/vignettes/gt-clinicaltables.Rmd
+++ b/vignettes/gt-clinicaltables.Rmd
@@ -115,10 +115,11 @@ custom_summary <- function(df, group_var, sum_var) {
   return(df_out)
 }
 
-adsl_summary <- purrr::map_df(
-      .x = dplyr::vars(AGE, AAGEGR1, SEX, ETHNIC, BLBMI),
-      .f = \(x) custom_summary(df = dplyr::filter(rx_adsl, ITTFL == "Y"), group_var = TRTA, sum_var = !!x)
-    )
+adsl_summary <- dplyr::filter(rx_adsl, ITTFL == "Y") |> 
+  (\(data) purrr::map_df(
+    .x = dplyr::vars(AGE, AAGEGR1, SEX, ETHNIC, BLBMI),
+    .f = \(x) custom_summary(df = data, group_var = TRTA, sum_var = !!x)
+  ))()
 ```
 
 We can now start to expose our tibble with the summary of adsl variables to **gt** using `gt()`. Values should be grouped by category, with labels as rownames. In addition, we can give our table a nice title and subtitle.
@@ -132,7 +133,7 @@ rx_adsl_tbl <-
   ) |> 
   tab_header(
     title = "x.x: Demographic Characteristics",
-    subtitle = "x.x.x: Demographic Characteristics - {gt} Analysis Set"
+    subtitle = "x.x.x: Demographic Characteristics - ITT Analysis Set"
   )
 
 rx_adsl_tbl
@@ -487,7 +488,7 @@ addv_sum <- rx_addv |>
 addv_sum
 ```
 
-This is the dataset that serves as a starting point for `gt`. We will start by exposing the dataset to `gt` and add our usual headers and footers.
+This is the dataset that serves as a starting point for `gt`. We will start by exposing the dataset to `gt` and add our usual left-aligned headers.
 
 ```{r addv_gtstart}
 addv_tbl <- addv_sum |> 
