--- a/vignettes/gt-clinicaltables.Rmd
+++ b/vignettes/gt-clinicaltables.Rmd
@@ -139,7 +139,7 @@ rx_adsl_tbl <-
 rx_adsl_tbl
 ```
 
-As a first step, let's try to format the columns, formatting counts, min, max and medians with `fmt_integer()`, percentages with `fmt_percent()`, and mean and sd with `fmt_number()` using 1 and 2 decimals, respectively. To get rid of all NA values, we will use `sub_missing()` and replace all NA's with an empty string.
+As a first step, let's try to format the columns, formatting counts, min, max and medians with `fmt_integer()`, percentages with `fmt_percent()`, and mean and sd with `fmt_number()` using 1 and 2 decimals, respectively. We are intentionally keeping the `NA` values for now, as these will be needed in the `cols_merge()` pattern in the next step.
 
 ```{r rx_demo_fmt}
 rx_adsl_tbl <- 
@@ -158,56 +158,31 @@ rx_adsl_tbl <-
     columns = starts_with("sd_"),
     rows = label == "Mean (SD)",
     decimals = 2
-  ) |> 
-  sub_missing(missing_text = "")
-
-rx_adsl_tbl
-```
-
-This looks way better but our table still has a rather wide style. To collapse the columns appropriately, we will use `cols_merge*()`, combining mean and SD, min and max, as well as n and percentages, respectively. Although the aggregation of mean and SD is not strictly the intended use of `cols_merge_n_pct()`, the function does a great job here.
-
-```{r rx_demo_merge}
-rx_adsl_tbl <- 
-  rx_adsl_tbl |> 
-  cols_merge_n_pct(
-    col_n = "val_Placebo",
-    col_pct = "pct_Placebo"
-  ) |> 
-  cols_merge_n_pct(
-    col_n = "val_Drug 1",
-    col_pct = "pct_Drug 1"
-  ) |>
-  cols_merge_n_pct(
-    col_n = "val_Placebo",
-    col_pct = "sd_Placebo"
-  ) |> 
-  cols_merge_n_pct(
-    col_n = "val_Drug 1",
-    col_pct = "sd_Drug 1"
-  ) |> 
-  cols_merge_range(
-    col_begin = "min_Placebo",
-    col_end = "max_Placebo",
-    sep = " - "
-  ) |> 
-  cols_merge_range(
-    col_begin = "min_Drug 1",
-    col_end = "max_Drug 1",
-    sep = " - "
-  ) |> 
-  cols_merge(
-    columns = c("val_Placebo", "min_Placebo"),
-    pattern = "{1}{2}"
-  ) |> 
-  cols_merge(
-    columns = c("val_Drug 1", "min_Drug 1"),
-    pattern = "{1}{2}"
   ) 
 
 rx_adsl_tbl
 ```
 
-Now that looks more like a demographic table. We can now start to look in to style features. Let us indent the values in the stub using `tab_stub_indent()` and left-align the title with `opt_align_table_header()`. 
+This looks way better but our table still has a rather wide style. To collapse the columns appropriately, we will use `cols_merge()`, combining mean and SD, min and max, as well as n and percentages, respectively. We will use the `pattern` argument to specify our custom mergin pattern.
+
+```{r rx_demo_merge}
+rx_adsl_tbl <- 
+  rx_adsl_tbl |> 
+  cols_merge(
+    columns = c("val_Placebo", "pct_Placebo", "sd_Placebo", "min_Placebo", "max_Placebo"),
+    pattern = "<<{1}>><< ({2})>><< ({3})>><<{4} - {5}>>"
+  ) |> 
+  cols_merge(
+    columns = c("val_Drug 1", "pct_Drug 1", "sd_Drug 1", "min_Drug 1", "max_Drug 1"),
+    pattern = "<<{1}>><< ({2})>><< ({3})>><<{4} - {5}>>"
+  )
+
+rx_adsl_tbl
+```
+
+Now that looks more like a demographic table. But let's take a step back and understand the merging pattern. `{ }` are used to arrange the single column values in a row-wise fashion. The number in curly braces corresponds to the order specified in the `columns = ` argument. `<< >>` surround spans of text that will be omitted if any of the columns inside contain missing values. Our first column in the call to `cols_merge()` contains values for n's, means and medians and is printed if the values are not missing (meaning for the cells for numeric and categoric n's, means and medians but not for min and max). The SD and percentages for categorical grouping variables are then appended to the cells for mean and categorical n's, because these are the only rows that contain non-missing values. All of the previous aspects are ignored for the min and max row, as n's, percentages, SD's and medians are missing. Here, only min and max are arranged.
+
+We can now start to look in to style features. Let us indent the values in the stub using `tab_stub_indent()` and left-align the title with `opt_align_table_header()`. 
 
 ```{r}
 rx_adsl_tbl <-
