--- a/vignettes/gt-clinicaltables.Rmd
+++ b/vignettes/gt-clinicaltables.Rmd
@@ -163,7 +163,7 @@ rx_adsl_tbl <-
 rx_adsl_tbl
 ```
 
-This looks way better but our table still has a rather wide style. To collapse the columns appropriately, we will use `cols_merge()`, combining mean and SD, min and max, as well as n and percentages, respectively. We will use the `pattern` argument to specify our custom mergin pattern.
+This looks way better but our table still has a rather wide style. To collapse the columns appropriately, we will use `cols_merge()`, combining mean and SD, min and max, as well as n and percentages, respectively. We will use the `pattern` argument to specify our custom merging pattern.
 
 ```{r rx_demo_merge}
 rx_adsl_tbl <- 
@@ -180,7 +180,7 @@ rx_adsl_tbl <-
 rx_adsl_tbl
 ```
 
-Now that looks more like a demographic table. But let's take a step back and understand the merging pattern. `{ }` are used to arrange the single column values in a row-wise fashion. The number in curly braces corresponds to the order specified in the `columns = ` argument. `<< >>` surround spans of text that will be omitted if any of the columns inside contain missing values. Our first column in the call to `cols_merge()` contains values for n's, means and medians and is printed if the values are not missing (meaning for the cells for numeric and categoric n's, means and medians but not for min and max). The SD and percentages for categorical grouping variables are then appended to the cells for mean and categorical n's, because these are the only rows that contain non-missing values. All of the previous aspects are ignored for the min and max row, as n's, percentages, SD's and medians are missing. Here, only min and max are arranged.
+Now that looks more like a demographic table. But let's take a step back and understand the merging pattern. `{ }` are used to arrange the single column values in a row-wise fashion. The number in curly braces corresponds to the order specified in the `columns = ` argument. `<< >>` surround spans of text that will be omitted if any of the columns inside contain missing values. Our first column in the call to `cols_merge()` contains values for n's, means and medians and is printed if the values are not missing (meaning for the cells for numeric and categorical n's, means and medians but not for min and max). The SD and percentages for categorical grouping variables are then appended to the cells for mean and categorical n's, because these are the only rows that contain non-missing values. All of the previous aspects are ignored for the min and max row, as n's, percentages, SD's and medians are missing. Here, only min and max are arranged.
 
 We can now start to look in to style features. Let us indent the values in the stub using `tab_stub_indent()` and left-align the title with `opt_align_table_header()`. 
 
